dashboard css changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ac532e; }
+  background: #90796e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #01432c; }
+  background: #de2b87; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #907989; }
+  background: #8aaaf4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #415f55; }
+  background: #563dbd; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e8de95; }
+  background: #c9c50b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #83828b; }
+  background: #6e394c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f278e4; }
+  background: #684b2b; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #37f5bc; }
+  background: #8c3c82; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #f09f2b; }
+  background: #84fba3; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #b5c15f; }
+  background: #ebc7b1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #70ab83; }
+  background: #f1df71; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #d0b89c; }
+  background: #04b355; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #aac9b1; }
+  background: #ca566c; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4a2ff5; }
+  background: #80b2c2; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #985913; }
+  background: #3fbda8; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #54edc2; }
+  background: #568dc1; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #5ef333; }
+  background: #d3d6f5; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f9136a; }
+  background: #713548; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d99947; }
+  background: #492b2e; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #afaae5; }
+  background: #371803; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1ac48d; }
+  background: #293e56; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #9935c4; }
+  background: #dad652; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #932fbc; }
+  background: #4f8786; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d98e05; }
+  background: #74202b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #37fd59; }
+  background: #38be5b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #7c7b38; }
+  background: #168130; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b124d2; }
+  background: #684596; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f7643e; }
+  background: #2d2027; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5bf28c; }
+  background: #ece8fa; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #110e7f; }
+  background: #d70dcb; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0af587; }
+  background: #25e72d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #754048; }
+  background: #eb01c8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #eb7f29; }
+  background: #dae3be; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #51c9e8; }
+  background: #daa4b6; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #749240; }
+  background: #7c21af; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #518393; }
+  background: #0202ef; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #11dd6c; }
+  background: #d68f46; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f2b445; }
+  background: #0d63ec; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #56de8a; }
+  background: #92e27c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7d6026; }
+  background: #748e0d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #de097b; }
+  background: #cd737d; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fb506c; }
+  background: #fc5c43; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #91b9db; }
+  background: #ce5d42; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #2bee6a; }
+  background: #c47f3f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #db7fd3; }
+  background: #7bc83a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #820139; }
+  background: #6bfcd9; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #81166a; }
+  background: #77431f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ea099b; }
+  background: #3fe63d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #03e7cf; }
+  background: #ec93a6; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b650d7; }
+  background: #fef482; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c28f63; }
+  background: #3dea87; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2af396; }
+  background: #feb73c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #e4d5c9; }
+  background: #4f2c1d; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #9d3d5a; }
+  background: #117edc; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6fdf4c; }
+  background: #776c15; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #eb230b; }
+  background: #702e11; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #79ed0a; }
+  background: #689e4b; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #fa179a; }
+  background: #19189e; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #813592; }
+  background: #8c4a0c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #4845fa; }
+  background: #582509; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #d91e8b; }
+  background: #416d78; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a949a3; }
+  background: #a7a331; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #926a89; }
+  background: #83fe36; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #11a7fc; }
+  background: #d79222; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #810fa1; }
+  background: #1eaa9d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #132a98; }
+  background: #5d017c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6eae47; }
+  background: #92e549; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #d3a7e6; }
+  background: #8b1644; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #bf1e07; }
+  background: #5a9390; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #ebff63; }
+  background: #8f5e48; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8b8e92; }
+  background: #6c8575; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #87a368; }
+  background: #1eb65c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #d7d0e4; }
+  background: #988dde; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #f95dff; }
+  background: #eaf72b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #bf1416; }
+  background: #8253eb; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e91697; }
+  background: #ce9004; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9a8dd0; }
+  background: #9b279b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #532156; }
+  background: #1c2f98; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #be06ee; }
+  background: #1fda11; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #020c8f; }
+  background: #0db50d; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #193438; }
+  background: #b41bf3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #eed749; }
+  background: #c4bc89; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #89178a; }
+  background: #98e1ba; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ced26a; }
+  background: #eaf7c8; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6d18c5; }
+  background: #d0a171; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #01c724; }
+  background: #a74526; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e9a917; }
+  background: #54d5be; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #cb9baa; }
+  background: #28abfb; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #bd6ca7; }
+  background: #85e969; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #2e91b5; }
+  background: #60c618; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e5db1d; }
+  background: #1e177e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #ca902d; }
+  background: #3aad04; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #91b185; }
+  background: #d9074d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #378739; }
+  background: #56f05a; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #99c705; }
+  background: #e5d78d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8e8696; }
+  background: #4ee81e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #e77b37; }
+  background: #7d76ed; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #604eeb; }
+  background: #775cbf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b2d6f0; }
+  background: #d3fe43; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cdf1f2; }
+  background: #9b6357; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9225,9 +9225,9 @@ th {
     border-radius: 13px;
     padding: 10px;
     margin-right: 35px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
     height: 75px; }
   .device-disclosure .device-box-main-text {
     font-size: 18px;
@@ -9433,12 +9433,13 @@ table .bold-heading {
 
 .widget-box {
   overflow: hidden;
-  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
   background: white;
   border-radius: 13px;
-  display: flex; }
+  display: flex;
+  border: 0px solid #bababa !important; }
   .widget-box .widget-heading {
     font-size: 23px;
     color: #4C4C4C;
@@ -9510,7 +9511,7 @@ table .bold-heading {
       background: white;
       width: 38px;
       height: 38px;
-      border-radius: 100%;
+      border-radius: 35%;
       display: flex;
       justify-content: center;
       margin: auto;
@@ -9533,7 +9534,8 @@ table .bold-heading {
 
 .flex-two-col {
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  font-size: 14px; }
 
 .dot-line {
   height: 1px;
