--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2078,9 +2078,9 @@ th {
     border-radius: 13px;
     padding: 10px;
     margin-right: 35px;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
+    -webkit-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.2);
     height: 75px;
   }
 
@@ -2388,12 +2388,13 @@ table .bold-heading {
 
 .widget-box {
   overflow: hidden;
-  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-  -moz-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
-  box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2) !important;
   background: white;
   border-radius: 13px;
   display: flex;
+  border: 0px solid #bababa !important;
 
   .widget-heading {
     font-size: 23px;
@@ -2497,7 +2498,7 @@ table .bold-heading {
       background: white;
       width: 38px;
       height: 38px;
-      border-radius: 100%;
+      border-radius: 35%;
       display: flex;
       justify-content: center;
       margin: auto;
@@ -2534,6 +2535,7 @@ table .bold-heading {
 .flex-two-col {
   display: flex;
   justify-content: space-between;
+  font-size: 14px;
 }
 
 
