--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #90796e; }
+  background: #f4552f; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #de2b87; }
+  background: #f0430b; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #8aaaf4; }
+  background: #9ac184; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #563dbd; }
+  background: #020bf4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c9c50b; }
+  background: #50e2fd; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #6e394c; }
+  background: #98c732; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #684b2b; }
+  background: #b0c2e4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #8c3c82; }
+  background: #d5077f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #84fba3; }
+  background: #a0fa65; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #ebc7b1; }
+  background: #8d39a8; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f1df71; }
+  background: #b75e5b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #04b355; }
+  background: #ef03db; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ca566c; }
+  background: #e135d6; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #80b2c2; }
+  background: #20d46b; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3fbda8; }
+  background: #e56cc3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #568dc1; }
+  background: #812cf6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #d3d6f5; }
+  background: #87c53f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #713548; }
+  background: #a5f216; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #492b2e; }
+  background: #536a1d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #371803; }
+  background: #e1705d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #293e56; }
+  background: #aa7824; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #dad652; }
+  background: #5c2e79; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4f8786; }
+  background: #21279a; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #74202b; }
+  background: #8e19b9; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #38be5b; }
+  background: #1bf148; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #168130; }
+  background: #81b060; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #684596; }
+  background: #3cdd70; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2d2027; }
+  background: #234aa3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ece8fa; }
+  background: #9a2603; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d70dcb; }
+  background: #27f12c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #25e72d; }
+  background: #6e43d7; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #eb01c8; }
+  background: #e753c5; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #dae3be; }
+  background: #de0761; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #daa4b6; }
+  background: #33ff13; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #7c21af; }
+  background: #19d868; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #0202ef; }
+  background: #e53e8d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d68f46; }
+  background: #b7ef50; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0d63ec; }
+  background: #85d216; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #92e27c; }
+  background: #da796c; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #748e0d; }
+  background: #b59eb2; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cd737d; }
+  background: #16f991; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #fc5c43; }
+  background: #30d7b0; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ce5d42; }
+  background: #3342bb; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #c47f3f; }
+  background: #39af21; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7bc83a; }
+  background: #9c6568; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6bfcd9; }
+  background: #bc151d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #77431f; }
+  background: #613be8; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3fe63d; }
+  background: #dce12c; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ec93a6; }
+  background: #6ae4ab; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #fef482; }
+  background: #7c4635; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3dea87; }
+  background: #de98ba; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #feb73c; }
+  background: #d0b978; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #4f2c1d; }
+  background: #449ebb; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #117edc; }
+  background: #44b98c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #776c15; }
+  background: #540307; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #702e11; }
+  background: #0b81a6; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #689e4b; }
+  background: #4cab2c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #19189e; }
+  background: #6b381b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8c4a0c; }
+  background: #c11df4; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #582509; }
+  background: #d93f37; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #416d78; }
+  background: #5551ff; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a7a331; }
+  background: #d40924; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #83fe36; }
+  background: #32dd35; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d79222; }
+  background: #c1da8a; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1eaa9d; }
+  background: #e529c8; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5d017c; }
+  background: #439358; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #92e549; }
+  background: #53ec4c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #8b1644; }
+  background: #2f3e27; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5a9390; }
+  background: #4701be; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #8f5e48; }
+  background: #d6e918; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #6c8575; }
+  background: #611bcd; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #1eb65c; }
+  background: #085ffd; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #988dde; }
+  background: #b99b4a; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #eaf72b; }
+  background: #c58b78; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8253eb; }
+  background: #0daf42; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #ce9004; }
+  background: #84a613; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9b279b; }
+  background: #09cbaa; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #1c2f98; }
+  background: #4858dc; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1fda11; }
+  background: #1009a2; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0db50d; }
+  background: #1ba226; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #b41bf3; }
+  background: #0ea2d5; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c4bc89; }
+  background: #8b6e58; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #98e1ba; }
+  background: #5c7327; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #eaf7c8; }
+  background: #86f43a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #d0a171; }
+  background: #3a1a5c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #a74526; }
+  background: #02d4c2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #54d5be; }
+  background: #b87433; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #28abfb; }
+  background: #dbc1c1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #85e969; }
+  background: #b39cf5; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #60c618; }
+  background: #815c6e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #1e177e; }
+  background: #22f2ba; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #3aad04; }
+  background: #9d32a5; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d9074d; }
+  background: #4e60d6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #56f05a; }
+  background: #8f20a2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #e5d78d; }
+  background: #4a139d; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4ee81e; }
+  background: #8728a6; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7d76ed; }
+  background: #8b41ed; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #775cbf; }
+  background: #ef8b6a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #d3fe43; }
+  background: #4df766; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9b6357; }
+  background: #cb8f9d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11393,6 +11393,9 @@ input:checked + .sliders:before {
 
 .red-text {
   color: #f00f00; }
+
+.dashboard-dropdown-menu {
+  margin-bottom: 30px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
