--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #f4552f; }
+  background: #c5ebf1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f0430b; }
+  background: #52cfb6; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9ac184; }
+  background: #528458; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #020bf4; }
+  background: #6d8bbf; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #50e2fd; }
+  background: #81d871; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #98c732; }
+  background: #25cfdb; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b0c2e4; }
+  background: #070f51; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d5077f; }
+  background: #793645; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #a0fa65; }
+  background: #052ab6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8d39a8; }
+  background: #cf3e1c; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b75e5b; }
+  background: #38b502; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ef03db; }
+  background: #c29d95; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #e135d6; }
+  background: #cf5cf4; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #20d46b; }
+  background: #4e46b3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #e56cc3; }
+  background: #426dac; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #812cf6; }
+  background: #c11d88; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #87c53f; }
+  background: #1d5995; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a5f216; }
+  background: #f20101; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #536a1d; }
+  background: #bd0b04; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #e1705d; }
+  background: #eda831; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #aa7824; }
+  background: #6e95aa; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #5c2e79; }
+  background: #bbe041; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #21279a; }
+  background: #1ba59d; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8e19b9; }
+  background: #f9b7d6; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #1bf148; }
+  background: #c02e39; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #81b060; }
+  background: #8cd81e; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3cdd70; }
+  background: #2398f9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #234aa3; }
+  background: #ffdded; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #9a2603; }
+  background: #0912f1; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #27f12c; }
+  background: #6540f1; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #6e43d7; }
+  background: #e0eb96; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #e753c5; }
+  background: #0b7603; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #de0761; }
+  background: #60a72b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #33ff13; }
+  background: #042b4f; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #19d868; }
+  background: #fa2c98; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e53e8d; }
+  background: #ffcd7b; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b7ef50; }
+  background: #d4044d; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #85d216; }
+  background: #dbfd75; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #da796c; }
+  background: #b1ffc3; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #b59eb2; }
+  background: #6d5625; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #16f991; }
+  background: #9be8e9; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #30d7b0; }
+  background: #e86235; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3342bb; }
+  background: #a59de9; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #39af21; }
+  background: #ddfab1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #9c6568; }
+  background: #b707b9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #bc151d; }
+  background: #172fa1; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #613be8; }
+  background: #d75f05; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #dce12c; }
+  background: #e6372e; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6ae4ab; }
+  background: #950455; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #7c4635; }
+  background: #b1c4e0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #de98ba; }
+  background: #61b2d0; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d0b978; }
+  background: #8df6e4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #449ebb; }
+  background: #a5379c; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #44b98c; }
+  background: #43af30; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #540307; }
+  background: #f3e692; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #0b81a6; }
+  background: #8d72ef; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4cab2c; }
+  background: #c9a536; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6b381b; }
+  background: #746a7a; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c11df4; }
+  background: #21a6f9; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #d93f37; }
+  background: #18c59a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #5551ff; }
+  background: #445b36; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d40924; }
+  background: #7fe521; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #32dd35; }
+  background: #6c0d7a; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c1da8a; }
+  background: #8439cd; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #e529c8; }
+  background: #f60e46; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #439358; }
+  background: #5f27ec; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #53ec4c; }
+  background: #58c93b; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2f3e27; }
+  background: #848b1b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4701be; }
+  background: #089af9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d6e918; }
+  background: #bf727d; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #611bcd; }
+  background: #d8f907; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #085ffd; }
+  background: #bbe844; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b99b4a; }
+  background: #7d3285; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c58b78; }
+  background: #c1f3c0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #0daf42; }
+  background: #ff5854; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #84a613; }
+  background: #9af1b5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #09cbaa; }
+  background: #9c3c16; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4858dc; }
+  background: #6288b4; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #1009a2; }
+  background: #4b664c; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #1ba226; }
+  background: #9d59c7; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #0ea2d5; }
+  background: #936bde; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8b6e58; }
+  background: #1317f7; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #5c7327; }
+  background: #c890a1; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #86f43a; }
+  background: #859167; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #3a1a5c; }
+  background: #b6d325; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #02d4c2; }
+  background: #843ef2; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #b87433; }
+  background: #e5e8e8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #dbc1c1; }
+  background: #ce2d8a; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #b39cf5; }
+  background: #a0df20; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #815c6e; }
+  background: #4a0b47; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #22f2ba; }
+  background: #570f1c; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9d32a5; }
+  background: #a7ec60; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4e60d6; }
+  background: #4a2da3; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8f20a2; }
+  background: #861dbc; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #4a139d; }
+  background: #b96052; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8728a6; }
+  background: #b5d3c3; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8b41ed; }
+  background: #b5c3ed; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ef8b6a; }
+  background: #9380af; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4df766; }
+  background: #f2d2a6; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cb8f9d; }
+  background: #d2a65c; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11393,6 +11393,9 @@ input:checked + .sliders:before {
 
 .red-text {
   color: #f00f00; }
+
+.user-analysis .heading-medium {
+  font-size: 16px !important; }
 
 .dashboard-dropdown-menu {
   margin-bottom: 30px; }
