--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -826,6 +826,10 @@ input:checked+.sliders:before {
     color: #f00f00;
 }
 
+.user-analysis .heading-medium {
+    font-size: 16px !important;
+}
+
 .dashboard-dropdown-menu {
     margin-bottom: 30px;
 }
