dashboard css changes

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8655,205 +8655,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #c5ebf1; }
+  background: #6af194; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #52cfb6; }
+  background: #d1223e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #528458; }
+  background: #9cce8b; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #6d8bbf; }
+  background: #bb489e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #81d871; }
+  background: #cd7dea; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #25cfdb; }
+  background: #3ebc2a; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #070f51; }
+  background: #66ca59; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #793645; }
+  background: #277ba7; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #052ab6; }
+  background: #267811; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #cf3e1c; }
+  background: #1fd4e5; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #38b502; }
+  background: #2c6f45; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c29d95; }
+  background: #66d1b3; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #cf5cf4; }
+  background: #bd3257; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4e46b3; }
+  background: #ed42cf; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #426dac; }
+  background: #32845b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #c11d88; }
+  background: #712016; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #1d5995; }
+  background: #48b154; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #f20101; }
+  background: #d7cafb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #bd0b04; }
+  background: #8014f0; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #eda831; }
+  background: #67a2d6; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #6e95aa; }
+  background: #76308c; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #bbe041; }
+  background: #3aaed6; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #1ba59d; }
+  background: #743b41; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f9b7d6; }
+  background: #a14919; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #c02e39; }
+  background: #3ebd3b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8cd81e; }
+  background: #7bcff8; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2398f9; }
+  background: #731e1f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ffdded; }
+  background: #3bced6; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #0912f1; }
+  background: #380cc0; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6540f1; }
+  background: #301fb5; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e0eb96; }
+  background: #5721ba; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #0b7603; }
+  background: #a65f4f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #60a72b; }
+  background: #5f17b8; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #042b4f; }
+  background: #8143bf; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #fa2c98; }
+  background: #12bb36; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #ffcd7b; }
+  background: #f0828d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d4044d; }
+  background: #f22062; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #dbfd75; }
+  background: #97dc34; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #b1ffc3; }
+  background: #b1348b; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6d5625; }
+  background: #93f6a4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9be8e9; }
+  background: #7b4640; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #e86235; }
+  background: #c885a3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #a59de9; }
+  background: #8e8e2a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ddfab1; }
+  background: #d7d9e1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b707b9; }
+  background: #628046; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #172fa1; }
+  background: #75da49; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #d75f05; }
+  background: #96b776; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #e6372e; }
+  background: #6e3843; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #950455; }
+  background: #2f79d5; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #b1c4e0; }
+  background: #e7b6dc; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #61b2d0; }
+  background: #177dcb; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #8df6e4; }
+  background: #6b9ea4; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #a5379c; }
+  background: #6276f5; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #43af30; }
+  background: #1fdb02; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #f3e692; }
+  background: #928628; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #8d72ef; }
+  background: #48a00f; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c9a536; }
+  background: #442cef; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #746a7a; }
+  background: #eefde2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #21a6f9; }
+  background: #422203; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #18c59a; }
+  background: #b4c573; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #445b36; }
+  background: #f3dfa5; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7fe521; }
+  background: #fb77fb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #6c0d7a; }
+  background: #055591; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #8439cd; }
+  background: #8aa8a4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f60e46; }
+  background: #891d62; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #5f27ec; }
+  background: #17ab54; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #58c93b; }
+  background: #9dac74; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #848b1b; }
+  background: #ca1ef6; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #089af9; }
+  background: #8bc172; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #bf727d; }
+  background: #6f8d54; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #d8f907; }
+  background: #856136; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #bbe844; }
+  background: #57928e; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #7d3285; }
+  background: #214739; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c1f3c0; }
+  background: #fc5c66; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #ff5854; }
+  background: #1fa530; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #9af1b5; }
+  background: #1b2e85; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #9c3c16; }
+  background: #d7902e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #6288b4; }
+  background: #f01be8; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4b664c; }
+  background: #72c1ea; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #9d59c7; }
+  background: #5191cd; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #936bde; }
+  background: #0c5112; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #1317f7; }
+  background: #66fb51; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #c890a1; }
+  background: #5e6116; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #859167; }
+  background: #02f973; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #b6d325; }
+  background: #433210; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #843ef2; }
+  background: #2a7eaf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e5e8e8; }
+  background: #43cbb8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ce2d8a; }
+  background: #bf4a2f; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #a0df20; }
+  background: #254fd3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4a0b47; }
+  background: #0fc0cf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #570f1c; }
+  background: #dc8419; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a7ec60; }
+  background: #a47d5f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4a2da3; }
+  background: #822420; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #861dbc; }
+  background: #a2d292; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b96052; }
+  background: #904a32; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b5d3c3; }
+  background: #90a22e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b5c3ed; }
+  background: #46f189; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9380af; }
+  background: #d79ac1; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f2d2a6; }
+  background: #503703; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #d2a65c; }
+  background: #17ea8d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10225,8 +10225,12 @@ table .bold-heading {
     color: #4C4C4C;
     font-size: 17px; }
 
+.dashboard-widget-container {
+  padding: 0px 20px; }
+
 .widget-add-module {
-  width: 100%; }
+  width: 100%;
+  margin: 15px 0px; }
 
 @font-face {
   font-family: 'proxima-semi-bold';
@@ -11399,6 +11403,19 @@ input:checked + .sliders:before {
 
 .dashboard-dropdown-menu {
   margin-bottom: 30px; }
+
+.dashboard-title-menu-dropdown a {
+  text-decoration: none !important;
+  padding-top: 15px;
+  padding-bottom: 15px; }
+
+.dashboard-title-menu-dropdown a img {
+  width: 14px;
+  margin-right: 5px; }
+
+.dashboard-title-menu-dropdown a:nth-child(1) {
+  border-bottom: 1px solid #a3a2a2;
+  margin-bottom: 10px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
