--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3711,9 +3711,11 @@ table .bold-heading {
 
 }
 
-
-
+.dashboard-widget-container {
+  padding: 0px 20px;
+}
 
 .widget-add-module {
   width: 100%;
+  margin: 15px 0px;
 }
